grinch-1: Change header to 'Zalupa'

--- a/site/html/main.html
+++ b/site/html/main.html
@@ -13,7 +13,7 @@
         <div class="title-container">
           <img class="logo" src="/img/logo-white.png" width="127" height="120" alt="Герб Росгвардии">
           <div class="title">
-            Конкурс на соискание премий Росгвардии<br>
+            ZALUPA!<br>
             <!-- В области литературы и искусства, в области науки и техники -->
             <span class="sub-title">В области литературы и искусства, в области науки и техники</span>
           </div> 
