--- a/site/main.html
+++ b/site/main.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Премия Росгвардии</title>
-    <link href="/css/styles_main.css" rel="stylesheet">
+    <link href="/css/main.css" rel="stylesheet">
     <link href="/css/docs.css" rel="stylesheet">
   </head>
 
@@ -20,11 +20,11 @@
         </div>
       </div>
     </header>
-    <nav class="sticky">
-      <a href="/site_rosguard.html">Общие сведения</a>
+    <nav>
+      <a href="/main.html">Общие сведения</a>
       <a href="/laureats.html">Лауреаты</a>
       <a href="#n3">Порядок рассмотрения работ</a>
-      <a href="/doc_templates.html">Образцы документов</a>
+      <a href="/docs.html">Образцы документов</a>
       <a href="#n5">Справочная информация</a>
     </nav>
 </body>
