--- a/site/docs.html
+++ b/site/docs.html
@@ -3,25 +3,28 @@
   <head>
     <meta charset="UTF-8">
     <title>Премия Росгвардии</title>
-    <link href="styles.css" rel="stylesheet">
+    <link href="/css/main.css" rel="stylesheet">
     <link href="/css/docs.css" rel="stylesheet">
   </head>
 
   <body>
     <header>
       <div class="logo-container">
-        <img class="logo" src="img/pic/rosgvard_logo_white.png" width="127" height="120" alt="Герб Росгвардии">
-      </div>
-      <div class="title-container">
-        <div class="title">Конкурс на соискание премий Росгвардии</div> 
-        <div class="sub-title">В области литературы и искусства, в области науки и техники</div> 
+        <div class="title-container">
+          <img class="logo" src="/img/logo-white.png" width="127" height="120" alt="Герб Росгвардии">
+          <div class="title">
+            Конкурс на соискание премий Росгвардии<br>
+            <!-- В области литературы и искусства, в области науки и техники -->
+            <span class="sub-title">В области литературы и искусства, в области науки и техники</span>
+          </div> 
+        </div>
       </div>
     </header>
-    <nav class="sticky">
-      <a href="/site_rosguard.html">Общие сведения</a>
+    <nav>
+      <a href="/main.html">Общие сведения</a>
       <a href="/laureats.html">Лауреаты</a>
       <a href="#n3">Порядок рассмотрения работ</a>
-      <a href="/doc_templates.html">Образцы документов</a>
+      <a href="/docs.html">Образцы документов</a>
       <a href="#n5">Справочная информация</a>
     </nav>
 
