Added statue with flag to main page

--- a/site/main.html
+++ b/site/main.html
@@ -27,5 +27,15 @@
       <a href="/docs.html">Образцы документов</a>
       <a href="#n5">Справочная информация</a>
     </nav>
-</body>
+
+    <main>
+      <div class="flag-statue">
+        <img src="/img/Statue.png" alt="Статуэтка" width="203" height="283">
+      </div>
+        
+      
+
+    </main>
+  </body>
+
 </html>
