--- a/site/main.html
+++ b/site/main.html
@@ -24,7 +24,7 @@
       <a href="/main.html">Общие сведения</a>
       <a href="/laureats.html">Лауреаты</a>
       <a href="#n3">Порядок рассмотрения работ</a>
-      <a href="/docs.html">Образцы документов</a>
+      <a href="/docs.html">Образцы документовf</a>
       <a href="#n5">Справочная информация</a>
     </nav>
 
