g-1: Added discription for presents

--- a/site/main.html
+++ b/site/main.html
@@ -29,10 +29,29 @@
     </nav>
 
     <main>
-      <div class="flag-statue">
-        <img src="/img/Statue.png" alt="Статуэтка" width="203" height="283">
-      </div>
+      <section class="descript-container">
+        <figure class="flag-statue">
+          <img src="/img/Statue.png" alt="Статуэтка" width="203" height="283">
+        </figure>
+          <p class="text-descript">
+           Премии Росгвардии в области литературы и искусства, в области науки и техники являются признанием заслуг военнослужащих, 
+           лиц, проходящих службу в войсках национальной гвардии Российской Федерации и имеющих специальные звания полиции, 
+           федеральных государственных гражданских служащих, работников войск национальной гвардии, граждан и организаций.<br><br>
+           <span>Конкурс на соискание премий Росгвардии проводится с 2020 года и является ежегодным.</span>
+          </p>
+      </section>
+
+      <h2>Премии Росгвардии присуждаются</h2>
+
+      <ul class="present-list">
+        <li>В области литературы и искусства (две премии) - за наиболее талантливые произведения (иные результаты творческой деятельности), пропагандирующие деятельность Росгвардии;</li>
+        <li>в области науки и техники - за достижения в развитии научной, научно-технической деятельности в интересах Росгвардии. Одна премия Росгвардии присуждается в номинации «Наука» и одна премия Росгвардии - в номинации «Наука и техника».</li>
+      </ul>
+
+      <section class="images-premia">
         
+      </section>
+
       
 
     </main>
