--- a/site/laureats.html
+++ b/site/laureats.html
@@ -45,7 +45,7 @@
                 <div class="nomination">
                     Наука и техника
                 </div>
-                <img class="laureat-img" src="/img/laureats/palukh-1.jpg">
+                <img class="laureat-img" src="/img/laureats/gvkg.jpg">
                 <div class="laureat-name">
                     Коллектив ГВКГ войск национальной гвардии
                 </div>
