g-1: Added contacts and replacing 'margin' by 'gap'

--- a/site/main.html
+++ b/site/main.html
@@ -85,6 +85,32 @@
 
       </div>
 
+      <h2 style="padding-top: 20px;">Контакты</h2>
+
+      <section class="contact-container">
+        <p>Работы, выдвигаемые на соискание премий Росгвардии направляются:</p>
+        <div class="contact-text">
+          <p>
+            <b>Литература и искусство</b>
+            в Главное военно-политическое <br> 
+            управление Федеральной службы <br> 
+            войск национальной гвардии <br> 
+            Российской Федерации <br><br>
+            109074 г. Москва, Китайгородский <br> проезд д. 7, стр. 2
+          </p>
+
+          <p class="contact-sci">
+            <b>Наука и техника</b>
+            в Департамент техники и научно- <br> 
+            исследовательской деятельности <br> 
+            Федеральной службы войск <br> 
+            национальной гвардии Российской <br>
+            Федерации<br><br>
+            101000 г. Москва, ул. Маросейка, <br> д. 12, стр. 2
+          </p>
+        </div>
+      </section>
+
     </main>
   </body>
 
