g-1: Added phone and made recent changes

--- a/site/main.html
+++ b/site/main.html
@@ -111,6 +111,13 @@
         </div>
       </section>
 
+      <p class="secret">
+        <b>Секретарь комиссии по премиям Росгвардии</b>
+        полковник Пивоваров Роман Викторович<br>
+        <span class="telephone"><img src="/img/phone-icon.png" alt="телефон">   +7(495) 361-80-94</span>
+      </p>
+
+      <img src="/img/rosguard-emblem.png" alt="эмблема Росгвардии" style="align-self: center;">
     </main>
   </body>
 
