g-1 hotfix: Improved Pivo paragraf

--- a/site/main.html
+++ b/site/main.html
@@ -112,7 +112,7 @@
       </section>
 
       <p class="secret">
-        <b>Секретарь комиссии по премиям Росгвардии</b>
+        <b>Секретарь комиссии по премиям Росгвардии</b><br>
         полковник Пивоваров Роман Викторович<br>
         <span class="telephone"><img src="/img/phone-icon.png" alt="телефон">   +7(495) 361-80-94</span>
       </p>
