--- a/site/laureats.html
+++ b/site/laureats.html
@@ -29,6 +29,7 @@
   </nav>
 
   <main id="container">
+    <!-- 2020 -->
     <h2 style="margin-top: 30px;">Лауреаты 2020</h2>
     <div class="laureats-container">
       <div class="laureat" id="baranov_2020" onclick="previewClickHandler('modal_baranov_2020')">
@@ -55,26 +56,27 @@
         <div class="nomination">
           Литература и искусство
         </div>
-        <img class="laureat-img" src="/img/laureats/palukh-1.jpg">
+        <img class="laureat-img" src="/img/laureats/journale-heads.jpg">
         <div class="laureat-name">
           Коллектив редакции журнала «На боевом посту»
         </div>
       </div>
     </div>
 
+    <!-- 2021 -->
     <h2 style="margin-top: 30px;">Лауреаты 2021</h2>
     <div class="laureats-container">
-      <div class="laureat">
+      <div class="laureat" id="science_2021" onclick="previewClickHandler('modal_science_2021')">
         <div class="nomination">
           Наука
         </div>
         <img class="laureat-img" src="/img/laureats/palukh-1.jpg">
         <div class="laureat-name">
-          полковник Милашенко С.Н., полковник Палюх А.И.
+          полковник Малашенко С.Н., полковник Палюх А.И.
         </div>
       </div>
 
-      <div class="laureat">
+      <div class="laureat" id="tech_2021" onclick="previewClickHandler('modal_tech_2021')">
         <div class="nomination">
           Наука и техника
         </div>
@@ -84,7 +86,7 @@
         </div>
       </div>
 
-      <div class="laureat">
+      <div class="laureat" id="art_2021" onclick="previewClickHandler('modal_art_2021')">
         <div class="nomination">
           Литература и искусство
         </div>
@@ -93,7 +95,7 @@
           Коллектив редакции журнала "На боевом посту"
         </div>
       </div>
-      <div class="laureat">
+      <div class="laureat" id="art_2021_2" onclick="previewClickHandler('modal_art_2021_2')">
         <div class="nomination">
           Литература и искусство
         </div>
@@ -104,9 +106,10 @@
       </div>
     </div>
 
+    <!-- 2022 -->
     <h2 style="margin-top: 30px;">Лауреаты 2022</h2>
     <div class="laureats-container">
-      <div class="laureat">
+      <div class="laureat" id="science_2022" onclick="previewClickHandler('modal_science_2022')">
         <div class="nomination">
           Наука
         </div>
@@ -115,31 +118,29 @@
           Заслуженный врач Российской Федерации Обельчак И.С.
         </div>
       </div>
-
-      <div class="laureat">
+      <div class="laureat" id="tech_2022" onclick="previewClickHandler('modal_tech_2022')">
         <div class="nomination">
           Наука и техника
         </div>
-        <img class="laureat-img" src="/img/laureats/obelchak.png">
+        <img class="laureat-img" style="height: 180px" src="/img/laureats/lebedev-1.jpg">
         <div class="laureat-name">
-          Коллектив ФГКОУ...
+          Коллектив ФГКВОУ ВО «Санкт-Петербургский военный ордена Жукова институт войск национальной гвардии Российской Федерации»
         </div>
       </div>
-
-      <div class="laureat">
-        <div class="nomination">
+      <div class="laureat" id="art_2022" onclick="previewClickHandler('modal_art_2022')">
+        <div class="nomination" id="art_2022">
           Литература и искусство
         </div>
         <img class="laureat-img" src="/img/laureats/klimov-kozlov.jpg">
         <div class="laureat-name">
-          Климов А.А. и Козлов А.В. - коллектив союза писателей России
+          Коллектив союза писателей России в составе Климова А.А. и Козлова А.В.
         </div>
       </div>
-      <div class="laureat">
+      <div class="laureat" id="art_2022_2" onclick="previewClickHandler('modal_art_2022_2')">
         <div class="nomination">
           Литература и искусство
         </div>
-        <img class="laureat-img" src="/img/laureats/dorovskyh.jpg">
+        <img class="laureat-img" style="height: 180px; width: auto" src="/img/laureats/dorovskyh.jpg">
         <div class="laureat-name">
           Заслуженный артист России, артист ансамбля песни и пляски «Гарнизонный дом офицеров «Реутово»» Доровских А.Н.
         </div>
@@ -148,6 +149,7 @@
   </main>
 
   <!-- Модальные окна -->
+  <!-- 2020 -->
   <div class="modal" id="modal_baranov_2020">
     <button class="btn-close" style="margin-left: auto;" onclick="toggleModal('modal_baranov_2020')"></button>
     <h3 style="margin-top: 0px;">Лауреат 2020 года в номинации «Наука» генерал-полковник в отставке Баранов В.П.</h3>
@@ -200,7 +202,114 @@
     </div>
   </div>
 
-  
+  <!-- 2021 -->
+  <div class="modal" id="modal_science_2021">
+    <button class="btn-close" style="margin-left: auto;" onclick="toggleModal('modal_science_2021')"></button>
+    <h3 style="margin-top: 0px;">Лауреат 2021 года в номинации «Наука»</h3>
+    <div class="photos">
+      <img src="/img/laureats/palukh-1.jpg" width="500px" height="auto">
+    </div>
+    <div class="description">
+      <p>За разработку методического аппарата финансового планирования ресурсного обеспечения потребностей войск национальной гвардии Российской Федерации, коллектив авторов в составе:</p>
+      <ul>
+        <li>кандидата экономических наук, начальника отдела методологии и анализа Управления финансового контроля и аудита полковника Малашенко Сергея Николаевича;</li>
+        <li>кандидата экономических наук, начальника отдела заработной платы и социальных гарантий управления нормативного регулирования Финансово-экономического департамента кандидата экономических наук полковника Палюха Андрея Ивановича.</li>
+      </ul>
+    </div>
+  </div>
+  <div class="modal" id="modal_tech_2021">
+    <button class="btn-close" style="margin-left: auto;" onclick="toggleModal('modal_tech_2021')"></button>
+    <h3 style="margin-top: 0px;">Лауреат 2021 года в номинации «Наука и техника» коллектив 5 военного клинического госпиталя войск национальной гвардии</h3>
+    <div class="photos">
+      <img src="/img/laureats/gvk-5.jpg" width="500px" height="auto">
+    </div>
+    <div class="description">
+      <p>За разработку системы периоперационной диагностики актуального состояния кардиоваскулярной системы пациентов с узловыми и злокачественными новообразованиями щитовидной железы коллектив 5-го военного клинического госпиталя войск национальной гвардии в составе:</p>
+      <ul>
+        <li>доктора медицинских наук, врача функциональной диагностики отделения функциональной диагностики Миронова Владимира Александровича;</li>
+        <li>заместителя начальника госпиталя по медицинской части – начальника медицинской части полковника медицинской службы Гагиева Василия Владимировича;</li>
+        <li>начальника кабинета ультразвуковой диагностики – старшего врача ультразвуковой диагностики отделения лучевой диагностики подполковника медицинской службы Подлесской Натальи Геннадьевны;</li>
+        <li>начальника отделения гнойной хирургии – врача-хирурга подполковника медицинской службы Белова Сергея Сергеевича.</li>
+      </ul>
+    </div>
+  </div>
+  <div class="modal" id="modal_art_2021">
+    <button class="btn-close" style="margin-left: auto;" onclick="toggleModal('modal_art_2021')"></button>
+    <h3 style="margin-top: 0px;">Лауреат 2021 года в номинации «Литература и искусство» коллектив редакции журнала «На боевом посту»</h3>
+    <div class="photos">
+      <img src="/img/laureats/journale-heads.jpg" width="500px" height="auto">
+    </div>
+    <div class="description">
+      <p>За подготовку и выпуск книг «Оружие Победы», «Золотые звезды Росгвардии», награжден коллектив Редакции журнала «На боевом посту» войск национальной гвардии в составе:</p>
+      <ul>
+        <li>заместителя главного редактора по непериодическим изданиям полковника Лебедева Александра Владимировича;</li>
+        <li>начальника отдела непериодических изданий подполковника Ширипова Дамира Ринатовича;</li>
+        <li>начальника отдела допечатной подготовки майора Курноскина Романа Андреевича;</li>
+      </ul>
+    </div>
+  </div>
+  <div class="modal" id="modal_art_2021_2">
+    <button class="btn-close" style="margin-left: auto;" onclick="toggleModal('modal_art_2021_2')"></button>
+    <h3 style="margin-top: 0px;">Лауреат 2021 года в номинации «Литература и искусство» заслуженный артист Российской Федерации Майданов Д.В.</h3>
+    <div class="photos">
+      <img src="/img/laureats/maidanov.jpg" width="500px" height="auto">
+    </div>
+    <div class="description">
+      <p>за песню «Моя Росгвардия», заслуженный артист Российской Федерации, депутат Государственной Думы VIII созыва, член Совета по культуре при Росгвардии, лауреат премии ФСБ России, Минобороны России, член центрального штаба Общероссийского народного фронта, заместитель председателя Общественного совета при Министерстве культуры Российской Федерации, автор и исполнитель многочисленных музыкальных произведений, актер, композитор Майданов Денис Васильевич.</p>
+    </div>
+  </div>
+
+  <!-- 2022 -->
+  <div class="modal" id="modal_science_2022">
+    <button class="btn-close" style="margin-left: auto;" onclick="toggleModal('modal_science_2022')"></button>
+    <h3 style="margin-top: 0px;">Лауреат 2022 года в номинации «Наука» заслуженный врач Российской Федерации Обельчак И.С.</h3>
+    <div class="photos">
+      <img src="/img/laureats/obelchak.png" width="500px" height="auto">
+    </div>
+    <div class="description">
+      <p>за научно-исследовательскую работу «Лучевая диагностика повреждений магистральных сосудов при боевой огнестрельной травме», врач-рентгенолог рентгеновского отделения (компьютерной и магниторезонансной томографии) центра лучевой диагностики Главного военного клинического госпиталя войск национальной гвардии доктор медицинских наук, заслуженный врач Российской Федерации Обельчак Игорь Семенович.</p>
+    </div>
+  </div>
+  <div class="modal" id="modal_tech_2022">
+    <button class="btn-close" style="margin-left: auto;" onclick="toggleModal('modal_tech_2022')"></button>
+    <h3 style="margin-top: 0px;">Лауреат 2022 года в номинации «Наука и техника» коллектив федерального государственного казенного военного образовательного учреждения высшего образования «Санкт-Петербургский военный ордена Жукова институт войск национальной гвардии Российской Федерации»</h3>
+    <div class="photos">
+      <img src="/img/laureats/lebedev-1.jpg" width="500px" height="auto">
+    </div>
+    <div class="description">
+      <p>за научно-исследовательскую работу «Совершенствование способов активной защиты транспортного средства с использованием изобретения «Сервал» награжден коллектив федерального государственного казенного военного образовательного учреждения высшего образования «Санкт-Петербургский военный ордена Жукова институт войск национальной гвардии Российской Федерации» в составе:</p>
+      <ul>
+        <li>заведующего кафедрой военно-научных исследований факультета (подготовки кадров высшей квалификации и дополнительного профессионального образования) доктора технических наук, профессора Голика Александра Михайловича;</li>
+        <li>профессора кафедры огневой подготовки доктора технических наук, профессора Шишова Юрию Аркадьевича;</li>
+        <li>профессора кафедры военно-научных исследований факультета (подготовки кадров высшей квалификации и дополнительного профессионального образования) кандидата военных наук Толстухи Юрия Евгеньевича;</li>
+        <li>доцента кафедры автомобилей, бронетанкового вооружения и техники кандидата технических наук Подгорного Александра Валентиновича.</li>
+      </ul>
+    </div>
+  </div>
+  <div class="modal" id="modal_art_2022">
+    <button class="btn-close" style="margin-left: auto;" onclick="toggleModal('modal_art_2022')"></button>
+    <h3 style="margin-top: 0px;">Лауреат 2022 года в номинации «Литература и искусство» авторский коллектив союза писателей России</h3>
+    <div class="photos">
+      <img src="/img/laureats/klimov-kozlov.jpg" width="500px" height="auto">
+    </div>
+    <div class="description">
+      <p>за подготовку книги «Красная звезда против трезубца. Боевые операции РККА и НКВД на Украине», коллектив авторов в составе:</p>
+      <ul>
+        <li>Климова Андрея Алексеевича – доктора исторических наук, доцента, старшего научного сотрудника научно-исследовательского института (военной истории) Военной академии Генерального штаба Вооруженных Сил Российской Федерации;</li>
+        <li>Козлова Андрея Валерьевича – доктора исторических наук, профессора, заведующего кафедрой коммуникационного менеджмента, рекламы и связей с общественностью Института журналистики, коммуникации и медиаобразования Московского педагогического государственного университета.</li>
+      </ul>
+    </div>
+  </div>
+  <div class="modal" id="modal_art_2022_2">
+    <button class="btn-close" style="margin-left: auto;" onclick="toggleModal('modal_art_2022_2')"></button>
+    <h3 style="margin-top: 0px;">Лауреат 2022 года в номинации «Литература и искусство» заслуженный артист России Доровских А.Н.</h3>
+    <div class="photos">
+      <img src="/img/laureats/dorovskyh.jpg" width="500px" height="auto">
+    </div>
+    <div class="description">
+      <p>за исполнение трилогии песен: «Князь Владимир», «Граф Комаровский», «Zа Правду! До Победы!», заслуженный артист России, артист ансамбля песни и пляски «Гарнизонный дом офицеров «Реутово» войск национальной гвардии»</p>
+    </div>
+  </div>
 
   <script src="/js/modal.js" type="text/javascript"></script>
 </body>
