Improve laureats page:  - Add single global close button for all modal windows;  - Make background full dimmed & blurred (including header and navbar)    while modal window is open.

--- a/site/laureats.html
+++ b/site/laureats.html
@@ -123,7 +123,7 @@
         <div class="nomination">
           Наука и техника
         </div>
-        <img class="laureat-img" style="height: 180px" src="/img/laureats/lebedev-1.jpg">
+        <img class="laureat-img" style="height: 175px" src="/img/laureats/lebedev-1.jpg">
         <div class="laureat-name">
           Коллектив ФГКВОУ ВО «Санкт-Петербургский военный ордена Жукова институт войск национальной гвардии Российской Федерации»
         </div>
@@ -133,7 +133,7 @@
         <div class="nomination" id="art_2022">
           Литература и искусство
         </div>
-        <img class="laureat-img" src="/img/laureats/klimov-kozlov.jpg">
+        <img class="laureat-img" style="height: 200px;" src="/img/laureats/klimov-kozlov.jpg">
         <div class="laureat-name">
           Коллектив союза писателей России в составе Климова А.А. и Козлова А.В.
         </div>
@@ -143,7 +143,7 @@
         <div class="nomination">
           Литература и искусство
         </div>
-        <img class="laureat-img" style="height: 180px; width: auto" src="/img/laureats/dorovskyh.jpg">
+        <img class="laureat-img" style="height: 190px; width: auto" src="/img/laureats/dorovskyh.jpg">
         <div class="laureat-name">
           Заслуженный артист России, артист ансамбля песни и пляски «Гарнизонный дом офицеров «Реутово»» Доровских А.Н.
         </div>
@@ -154,9 +154,9 @@
   <!-- Модальные окна -->
   <!-- 2020 -->
   <div class="modal" id="modal_baranov_2020">
-    <div style="margin-left: auto;">
+    <!-- <div style="margin-left: auto;">
       <button class="btn-close" onclick="toggleModal('modal_baranov_2020')"></button>
-    </div>
+    </div> -->
     <h3 style="margin-top: 0px;">Лауреат 2020 года в номинации «Наука» генерал-полковник в отставке Баранов В.П.</h3>
     <div class="photos">
       <img src="/img/laureats/baranov-2.jpg" width="400px" height="auto">
@@ -175,9 +175,9 @@
   </div>
 
   <div class="modal" id="modal_gvkg_2020">
-    <div style="margin-left: auto;">
+    <!-- <div style="margin-left: auto;">
       <button class="btn-close" onclick="toggleModal('modal_gvkg_2020')"></button>
-    </div>
+    </div> -->
     <h3 style="margin-top: 0px;">Лауреат 2020 года в номинации «Наука и техника» коллектив ГВКГ войск национальной гвардии </h3>
     <div class="photos">
       <img src="/img/laureats/gvkg.jpg" width="400px" height="auto">
@@ -193,9 +193,9 @@
   </div>
 
   <div class="modal" id="modal_journal_2020">
-    <div style="margin-left: auto;">
+    <!-- <div style="margin-left: auto;">
       <button class="btn-close" onclick="toggleModal('modal_journal_2020')"></button>
-    </div>
+    </div> -->
     <h3 style="margin-top: 0px;">Лауреат 2020 года в номинации «Литература и искусство» коллектив редакции журнала «На боевом посту»</h3>
     <div class="photos">
       <img src="/img/laureats/journale-heads.jpg" width="500px" height="auto">
@@ -215,9 +215,9 @@
 
   <!-- 2021 -->
   <div class="modal" id="modal_science_2021">
-    <div style="margin-left: auto;">
+    <!-- <div style="margin-left: auto;">
       <button class="btn-close" onclick="toggleModal('modal_science_2021')"></button>
-    </div>
+    </div> -->
     <h3 style="margin-top: 0px;">Лауреат 2021 года в номинации «Наука»</h3>
     <div class="photos">
       <img src="/img/laureats/palukh-1.jpg" width="500px" height="auto">
@@ -232,9 +232,9 @@
   </div>
 
   <div class="modal" id="modal_tech_2021">
-    <div style="margin-left: auto;">
+    <!-- <div style="margin-left: auto;">
       <button class="btn-close" onclick="toggleModal('modal_tech_2021')"></button>
-    </div>
+    </div> -->
     <h3 style="margin-top: 0px;">Лауреат 2021 года в номинации «Наука и техника» коллектив 5 военного клинического госпиталя войск национальной гвардии</h3>
     <div class="photos">
       <img src="/img/laureats/gvk-5.jpg" width="500px" height="auto">
@@ -251,9 +251,9 @@
   </div>
 
   <div class="modal" id="modal_art_2021">
-    <div style="margin: auto;">
+    <!-- <div style="margin: auto;">
       <button class="btn-close" onclick="toggleModal('modal_art_2021')"></button>
-    </div>
+    </div> -->
     <h3 style="margin-top: 0px;">Лауреат 2021 года в номинации «Литература и искусство» коллектив редакции журнала «На боевом посту»</h3>
     <div class="photos">
       <img src="/img/laureats/journale-heads.jpg" width="500px" height="auto">
@@ -269,9 +269,9 @@
   </div>
 
   <div class="modal" id="modal_art_2021_2">
-    <div style="margin-left: auto;">
+    <!-- <div style="margin-left: auto;">
       <button class="btn-close" onclick="toggleModal('modal_art_2021_2')"></button>
-    </div>
+    </div> -->
     <h3 style="margin-top: 0px;">Лауреат 2021 года в номинации «Литература и искусство» заслуженный артист Российской Федерации Майданов Д.В.</h3>
     <div class="photos">
       <img src="/img/laureats/maidanov.jpg" width="500px" height="auto">
@@ -283,10 +283,9 @@
 
   <!-- 2022 -->
   <div class="modal" id="modal_science_2022">
-    <div style="margin-left: auto;">
+    <!-- <div style="margin-left: auto;">
       <button class="btn-close" onclick="toggleModal('modal_science_2022')"></button>
-    </div>
-    
+    </div> -->
     <h3 style="margin-top: 0px;">Лауреат 2022 года в номинации «Наука» заслуженный врач Российской Федерации Обельчак И.С.</h3>
     <div class="photos">
       <img src="/img/laureats/obelchak.png" width="500px" height="auto">
@@ -297,9 +296,9 @@
   </div>
 
   <div class="modal" id="modal_tech_2022">
-    <div style="margin-left: auto;">
+    <!-- <div style="margin-left: auto;">
       <button class="btn-close" onclick="toggleModal('modal_tech_2022')"></button>
-    </div>
+    </div> -->
     <h3 style="margin-top: 0px;">Лауреат 2022 года в номинации «Наука и техника» коллектив федерального государственного казенного военного образовательного учреждения высшего образования «Санкт-Петербургский военный ордена Жукова институт войск национальной гвардии Российской Федерации»</h3>
     <div class="photos">
       <img src="/img/laureats/lebedev-1.jpg" width="500px" height="auto">
@@ -316,9 +315,9 @@
   </div>
 
   <div class="modal" id="modal_art_2022">
-    <div style="margin-left: auto;">
+    <!-- <div style="margin-left: auto;">
       <button class="btn-close" onclick="toggleModal('modal_art_2022')"></button>
-    </div>
+    </div> -->
     <h3 style="margin-top: 0px;">Лауреат 2022 года в номинации «Литература и искусство» авторский коллектив союза писателей России</h3>
     <div class="photos">
       <img src="/img/laureats/klimov-kozlov.jpg" width="500px" height="auto">
@@ -333,9 +332,9 @@
   </div>
 
   <div class="modal" id="modal_art_2022_2">
-    <div style="margin-left: auto;">
+    <!-- <div style="margin-left: auto;">
       <button class="btn-close" onclick="toggleModal('modal_art_2022_2')"></button>
-    </div>
+    </div> -->
     <h3 style="margin-top: 0px;">Лауреат 2022 года в номинации «Литература и искусство» заслуженный артист России Доровских А.Н.</h3>
     <div class="photos">
       <img src="/img/laureats/dorovskyh.jpg" width="500px" height="auto">
@@ -344,6 +343,9 @@
       <p>за исполнение трилогии песен: «Князь Владимир», «Граф Комаровский», «Zа Правду! До Победы!», заслуженный артист России, артист ансамбля песни и пляски «Гарнизонный дом офицеров «Реутово» войск национальной гвардии»</p>
     </div>
   </div>
+
+  <div class="overlay" id="overlay" style="display: none;"></div>
+  <button class="btn-close-modal" id="btn-modal-close" onclick="toggleModal()"></button>
 
   <script src="/js/modal.js" type="text/javascript"></script>
 </body>
