Update main page:   - Move main page CSS stuff to dedicated file;   - Rename main page to index.html.

--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,7 @@
     <title>Премия Росгвардии</title>
     <link href="/css/main.css" rel="stylesheet">
     <link href="/css/docs.css" rel="stylesheet">
+    <link href="/css/index.css" rel="stylesheet">
   </head>
 
   <body>
@@ -21,7 +22,7 @@
       </div>
     </header>
     <nav>
-      <a href="/main.html">Общие сведения</a>
+      <a href="/index.html">Общие сведения</a>
       <a href="/laureats.html">Лауреаты</a>
       <a href="#n3">Порядок рассмотрения работ</a>
       <a href="/docs.html">Образцы документов</a>
