--- a/site/laureats.html
+++ b/site/laureats.html
@@ -21,7 +21,7 @@
     </div>
   </header>
   <nav>
-    <a href="/main.html">Общие сведения</a>
+    <a href="/index.html">Общие сведения</a>
     <a href="/laureats.html">Лауреаты</a>
     <a href="#n3">Порядок рассмотрения работ</a>
     <a href="/docs.html">Образцы документов</a>
