--- a/site/index.html
+++ b/site/index.html
@@ -12,7 +12,7 @@
     <header>
       <div class="logo-container">
         <div class="title-container">
-          <img class="logo" src="/img/logo-white.png" width="127" height="120" alt="Герб Росгвардии">
+          <img class="logo" src="https://rosguard.gov.ru/static/images/main/rosgvard_logo_white.png" width="127" height="120" alt="Герб Росгвардии">
           <div class="title">
             Конкурс на соискание премий Росгвардии<br>
             <!-- В области литературы и искусства, в области науки и техники -->
