--- a/site/index.html
+++ b/site/index.html
@@ -89,7 +89,7 @@
       <h2 style="padding-top: 20px;">Контакты</h2>
 
       <section class="contact-container">
-        <p>Работы, выдвигаемые на соискание премий Росгвардии направляются:</p>
+        <p style="margin-bottom: 20px;">Работы, выдвигаемые на соискание премий Росгвардии направляются:</p>
         <div class="contact-text">
           <p>
             <b>Литература и искусство</b>
@@ -110,13 +110,14 @@
             101000 г. Москва, ул. Маросейка, <br> д. 12, стр. 2
           </p>
         </div>
+        <p class="secret">
+          <b>Секретарь комиссии по премиям Росгвардии</b><br>
+          полковник Пивоваров Роман Викторович<br>
+          <span class="telephone"><img src="/img/phone-icon.png" alt="телефон">   +7(495) 361-80-94</span>
+        </p>
       </section>
 
-      <p class="secret">
-        <b>Секретарь комиссии по премиям Росгвардии</b><br>
-        полковник Пивоваров Роман Викторович<br>
-        <span class="telephone"><img src="/img/phone-icon.png" alt="телефон">   +7(495) 361-80-94</span>
-      </p>
+
 
       <img src="/img/rosguard-emblem.png" alt="эмблема Росгвардии" style="align-self: center;">
     </main>
