g-1: added all needed documents

--- a/site/docs.html
+++ b/site/docs.html
@@ -33,7 +33,7 @@
 
       <div class="docs_container">
         <div class="doc_item">
-          <a href="/img/pic/flag.png" download>
+          <a href="/docs/Представление работы на соискание премии Росгвардии (для организации).pdf  " download>
             <div class="doc_download">
               <div class="image"></div>
               <span class="text">Представление работы на соискание премии Росгвардии (от организации)</span>
@@ -42,7 +42,7 @@
         </div>
 
         <div class="doc_item">
-          <a href="">
+          <a href="/docs/Информационная карточка.pdf">
             <div class="doc_download">
               <div class="image"></div>
               <span class="text">Информационная карточка</span>
@@ -51,7 +51,7 @@
         </div>
 
         <div class="doc_item">
-          <a href="">
+          <a href="/docs/Представление работы на соискание премии Росгвардии (для авторского коллектива).pdf">
             <div class="doc_download">
               <div class="image"></div>
               <span class="text">Представление работы на соискание премии Росгвардии (авторский коллектив)</span>
@@ -60,7 +60,7 @@
         </div>
 
         <div class="doc_item">
-          <a href="">
+          <a href="/docs/Аннотация работы.pdf">
             <div class="doc_download">
               <div class="image"></div>
               <span class="text">Аннотация работы</span>
@@ -69,7 +69,7 @@
         </div>
 
         <div class="doc_item">
-          <a href="">
+          <a href="/docs/Письмо-разрешение на публикацию в открытой печати.pdf">
             <div class="doc_download">
               <div class="image"></div>
               <span class="text">Письмо-разрешение на публикацию в открытой печати</span>
@@ -78,7 +78,7 @@
         </div>
 
         <div class="doc_item">
-          <a href="">
+          <a href="/docs/Основное содержание работы.pdf">
             <div class="doc_download">
               <div class="image"></div>
               <span class="text">Основное содержание работы</span>
@@ -87,7 +87,7 @@
         </div>
 
         <div class="doc_item">
-          <a href="">
+          <a href="/docs/Заключение о степени секретности сведений, содержащихся в материалах работы, выдвигаемой на соискание премии Росгвардии.pdf">
             <div class="doc_download">
               <div class="image"></div>
               <span class="text">Заключение о степени секретности сведений, содержащихся в материалах работы, выдвигаемой на соискание премий Росгвардии</span>
@@ -96,7 +96,7 @@
         </div>
 
         <div class="doc_item">
-          <a href="">
+          <a href="/docs/Согласие автора на обработку персональных данных.pdf">
             <div class="doc_download">
               <div class="image"></div>
               <span class="text">Согласие автора работы на обработку персональных данных</span>
@@ -105,7 +105,7 @@
         </div>
 
         <div class="doc_item">
-          <a href="">
+          <a href="/docs/Выписка из протокола заседания ученого совета(собрания трудового коллектива).pdf">
             <div class="doc_download">
               <div class="image"></div>
               <span class="text">Выписка из протокола заседания ученого (научного, научно-технического) совета (собрания трудового коллектива)</span>
@@ -114,7 +114,7 @@
         </div>
 
         <div class="doc_item">
-          <a href="">
+          <a href="/docs/Согласие автора на передачу персональных данных третьим лицам.pdf">
             <div class="doc_download">
               <div class="image"></div>
               <span class="text">Согласие на передачу персональных данных третьим лицам</span>
@@ -123,7 +123,7 @@
         </div>
 
         <div class="doc_item">
-          <a href="">
+          <a href="/docs/Справка о творческом вкладе авторов работы, выдвигаемой на соискание премии Росгвардии.pdf">
             <div class="doc_download">
               <div class="image"></div>
               <span class="text">Справка о творческом вкладе авторов работы, выдвигаемой на соискание премии Росгвардии</span>
@@ -132,7 +132,7 @@
         </div>
 
         <div class="doc_item">
-          <a href="">
+          <a href="/docs/Справка об экономическом эффекте.pdf">
             <div class="doc_download">
               <div class="image"></div>
               <span class="text">Справка об экономическом эффекте от реализации работы</span>
@@ -141,7 +141,7 @@
         </div>
 
         <div class="doc_item">
-          <a href="">
+          <a href="/docs/Сведения об авторе.pdf">
             <div class="doc_download">
               <div class="image"></div>
               <span class="text">Сведения об авторе</span>
