g-1: added review and infom pages with no content(nav bar eddited)

--- a/site/laureats.html
+++ b/site/laureats.html
@@ -23,9 +23,9 @@
   <nav>
     <a href="/index.html">Общие сведения</a>
     <a href="/laureats.html">Лауреаты</a>
-    <a href="#n3">Порядок рассмотрения работ</a>
+    <a href="/review.html">Порядок рассмотрения работ</a>
     <a href="/docs.html">Образцы документов</a>
-    <a href="#n5">Справочная информация</a>
+    <a href="/inform.html">Справочная информация</a>
   </nav>
 
   <main id="container">
