g-1: first beer changes

--- a/site/docs.html
+++ b/site/docs.html
@@ -11,7 +11,7 @@
     <header>
       <div class="logo-container">
         <div class="title-container">
-          <img class="logo" src="https://rosguard.gov.ru/static/images/main/rosgvard_logo_white.png" width="127" height="120" alt="Герб Росгвардии">
+          <img class="logo" src="/img/logo-white.png" width="127" height="120" alt="Герб Росгвардии">
           <div class="title">
             Конкурс на соискание премий Росгвардии<br>
             <!-- В области литературы и искусства, в области науки и техники -->
@@ -32,6 +32,16 @@
       <h2 style="margin-top: 30px;">Образцы документов</h2>
 
       <div class="docs_container">
+
+        <div class="doc_item_main">
+          <a href="/docs/Рекомендуемая комплектность документов и материалов.pdf">
+            <div class="doc_download_main">
+              <div class="image"></div>
+              <span class="text_main">Рекомендуемая комплектность документов и материалов</span>
+            </div>
+          </a>
+        </div>
+
         <div class="doc_item">
           <a href="/docs/Представление работы на соискание премии Росгвардии (для организации).pdf  " download>
             <div class="doc_download">
