--- a/site/index.html
+++ b/site/index.html
@@ -49,7 +49,7 @@
         <li>в области науки и техники - за достижения в развитии научной, научно-технической деятельности в интересах Росгвардии. Одна премия Росгвардии присуждается в номинации «Наука» и одна премия Росгвардии - в номинации «Наука и техника».</li>
       </ul>
 
-      <section class="images-premia">
+      <!-- <section class="images-premia">
         <div class="liter">
           <p><b>Литература и искусство</b></p>
           <img src="/img/books.png" max-width="527px">
@@ -59,9 +59,9 @@
           <p><b>Наука и техника</b></p>
           <img src="/img/sci-img.png" max-width="501px">
         </div>
-      </section>
+      </section> -->
 
-      <h2 style="padding-top: 55px; margin-bottom: 50px;">Каждая премия включает</h2>
+      <h2 style="padding-top: 15px; margin-bottom: 50px;">Каждая премия включает</h2>
     
       <div class="prizes">
         <div>
