--- a/site/laureats.html
+++ b/site/laureats.html
@@ -56,9 +56,9 @@
         <div class="nomination">
           Литература и искусство
         </div>
-        <img class="laureat-img" src="/img/laureats/journale-heads.jpg">
+        <img class="laureat-img" src="/img/laureats/boltikov.png">
         <div class="laureat-name">
-          Коллектив редакции журнала «На боевом посту»
+          Коллектив редакции журнала «На боевом посту» войск национальной гвардии
         </div>
       </div>
     </div>
@@ -72,7 +72,7 @@
         </div>
         <img class="laureat-img" src="/img/laureats/palukh-1.jpg">
         <div class="laureat-name">
-          полковник Малашенко С.Н., полковник Палюх А.И.
+          Коллектив авторов  УФКА и ФЭД Росгвардии в составе полковника Малашенко С.Н. и полковника Палюха А.И.
         </div>
       </div>
 
@@ -92,7 +92,7 @@
         </div>
         <img class="laureat-img" src="/img/laureats/journale-heads.jpg">
         <div class="laureat-name">
-          Коллектив редакции журнала "На боевом посту"
+          Коллектив редакции журнала "На боевом посту" войск национальной гвардии
         </div>
       </div>
       <div class="laureat" id="art_2021_2" onclick="previewClickHandler('modal_art_2021_2')">
@@ -123,7 +123,7 @@
         <div class="nomination">
           Наука и техника
         </div>
-        <img class="laureat-img" style="height: 175px" src="/img/laureats/lebedev-1.jpg">
+        <img class="laureat-img" style="height: 175px" src="/img/laureats/SPB_instit.jpg">
         <div class="laureat-name">
           Коллектив ФГКВОУ ВО «Санкт-Петербургский военный ордена Жукова институт войск национальной гвардии Российской Федерации»
         </div>
@@ -196,7 +196,7 @@
     <!-- <div style="margin-left: auto;">
       <button class="btn-close" onclick="toggleModal('modal_journal_2020')"></button>
     </div> -->
-    <h3 style="margin-top: 0px;">Лауреат 2020 года в номинации «Литература и искусство» коллектив редакции журнала «На боевом посту»</h3>
+    <h3 style="margin-top: 0px;">Лауреат 2020 года в номинации «Литература и искусство» коллектив редакции журнала «На боевом посту» войск национальной гвардии</h3>
     <div class="photos">
       <img src="/img/laureats/journale-heads.jpg" width="500px" height="auto">
     </div>
@@ -218,7 +218,7 @@
     <!-- <div style="margin-left: auto;">
       <button class="btn-close" onclick="toggleModal('modal_science_2021')"></button>
     </div> -->
-    <h3 style="margin-top: 0px;">Лауреат 2021 года в номинации «Наука»</h3>
+    <h3 style="margin-top: 0px;">Лауреат 2021 года в номинации «Наука» авторский коллектив  УФКА и ФЭД Росгвардии</h3>
     <div class="photos">
       <img src="/img/laureats/palukh-1.jpg" width="500px" height="auto">
     </div>
@@ -254,7 +254,7 @@
     <!-- <div style="margin: auto;">
       <button class="btn-close" onclick="toggleModal('modal_art_2021')"></button>
     </div> -->
-    <h3 style="margin-top: 0px;">Лауреат 2021 года в номинации «Литература и искусство» коллектив редакции журнала «На боевом посту»</h3>
+    <h3 style="margin-top: 0px;">Лауреат 2021 года в номинации «Литература и искусство» коллектив редакции журнала «На боевом посту» войск национальной гвардии</h3>
     <div class="photos">
       <img src="/img/laureats/journale-heads.jpg" width="500px" height="auto">
     </div>
@@ -301,7 +301,7 @@
     </div> -->
     <h3 style="margin-top: 0px;">Лауреат 2022 года в номинации «Наука и техника» коллектив федерального государственного казенного военного образовательного учреждения высшего образования «Санкт-Петербургский военный ордена Жукова институт войск национальной гвардии Российской Федерации»</h3>
     <div class="photos">
-      <img src="/img/laureats/lebedev-1.jpg" width="500px" height="auto">
+      <img src="/img/laureats/SPB_instit.jpg" width="500px" height="auto">
     </div>
     <div class="description">
       <p>за научно-исследовательскую работу «Совершенствование способов активной защиты транспортного средства с использованием изобретения «Сервал» награжден коллектив федерального государственного казенного военного образовательного учреждения высшего образования «Санкт-Петербургский военный ордена Жукова институт войск национальной гвардии Российской Федерации» в составе:</p>
