g-1: added all new docunents

--- a/site/laureats.html
+++ b/site/laureats.html
@@ -198,7 +198,7 @@
     </div> -->
     <h3 style="margin-top: 0px;">Лауреат 2020 года в номинации «Литература и искусство» коллектив редакции журнала «На боевом посту» войск национальной гвардии</h3>
     <div class="photos">
-      <img src="/img/laureats/journale-heads.jpg" width="500px" height="auto">
+      <img src="/img/laureats/boltikov.png" width="500px" height="auto">
     </div>
     <div class="description">
       <p>За подготовку и выпуск трилогии документальных фильмов «Легендарные полководцы войск правопорядка» («Забытые истории Евграфа Комаровского»), «Генерал армии Яковлев. Легенда Росгвардии», «Непобежденный. Герой Российской Федерации Анатолий Романов», коллектив Редакции журнала «На боевом посту» войск национальной гвардии в составе:  </p>
