--- a/site/laureats.html
+++ b/site/laureats.html
@@ -123,7 +123,7 @@
         <div class="nomination">
           Наука и техника
         </div>
-        <img class="laureat-img" style="height: 175px" src="/img/laureats/SPB_instit.jpg">
+        <img class="laureat-img" style="height: 175px" src="/img/laureats/SPB_inst.jpg">
         <div class="laureat-name">
           Коллектив ФГКВОУ ВО «Санкт-Петербургский военный ордена Жукова институт войск национальной гвардии Российской Федерации»
         </div>
@@ -301,7 +301,7 @@
     </div> -->
     <h3 style="margin-top: 0px;">Лауреат 2022 года в номинации «Наука и техника» коллектив федерального государственного казенного военного образовательного учреждения высшего образования «Санкт-Петербургский военный ордена Жукова институт войск национальной гвардии Российской Федерации»</h3>
     <div class="photos">
-      <img src="/img/laureats/SPB_instit.jpg" width="500px" height="auto">
+      <img src="/img/laureats/SPB_inst.jpg" width="500px" height="auto">
     </div>
     <div class="description">
       <p>за научно-исследовательскую работу «Совершенствование способов активной защиты транспортного средства с использованием изобретения «Сервал» награжден коллектив федерального государственного казенного военного образовательного учреждения высшего образования «Санкт-Петербургский военный ордена Жукова институт войск национальной гвардии Российской Федерации» в составе:</p>
