--- a/site/review.html
+++ b/site/review.html
@@ -54,6 +54,8 @@
           <img src="/img/review/comission-11.png">
         </div>
 
+        <div class="vertical-line1"></div>
+
         <div class="gear-comission">
           <div class="gear">
             <img src="/img/review/gear-21.png" width="111px" height="111px">
@@ -64,6 +66,8 @@
           <div class="line-gear"></div>
           <img src="/img/review/comission-gear-21.png">
         </div>
+        <div class="vertical-line2"></div>
+        
 
         <div class="lit-comission">
           <div class="liter">
@@ -94,9 +98,10 @@
         <ul style="text-align: center;">
           <li class="stage3-lih2">Награждение лауретов</li>
         </ul>
-        <span сlass="text-stage3"><b><i>Награждение лауреатов</i></b> конкурса проводится директором Росгвардии (по его поручению одним из заместителей <br>
-           директора Росгвардии) в ходе проведения торжественных мероприятий, посвященных Дню войск национальной гвардии <br>
-           Российской Федерации (27 марта).</span>
+        <span сlass="text-stage3"><b><i>Награждение лауреатов</i></b> конкурса проводится директором Росгвардии (по его поручению одним из заместителей
+           директора Росгвардии) в ходе проведения торжественных мероприятий, посвященных Дню войск национальной гвардии
+           Российской Федерации (27 марта).
+        </span>
       </div>
     </main>
 
