Update docs urls

--- a/site/docs.html
+++ b/site/docs.html
@@ -33,7 +33,7 @@
       <div class="docs_container">
 
         <div class="doc_item_main">
-          <a href="/docs/Рекомендуемая комплектность документов и материалов.pdf">
+          <a href="/docs/Rekomenduemaya_komplektnost_dokumentov_i_materialov.pdf">
             <div class="doc_download_main">
               <div class="image"></div>
               <span class="text_main">Рекомендуемая комплектность документов и материалов</span>
@@ -42,7 +42,7 @@
         </div>
 
         <div class="doc_item">
-          <a href="/docs/Представление работы на соискание премии Росгвардии (для организации).pdf" download>
+          <a href="/docs/Predstavlenie_raboty_na_soiskanie_premii_Rosgvardii_(dlya organizacii).pdf" download>
             <div class="doc_download">
               <div class="image"></div>
               <span class="text">Представление работы на соискание премии Росгвардии (от организации)</span>
@@ -51,7 +51,7 @@
         </div>
 
         <div class="doc_item">
-          <a href="/docs/Информационная карточка.pdf">
+          <a href="/docs/Informacionnaya_kartochka.pdf">
             <div class="doc_download">
               <div class="image"></div>
               <span class="text">Информационная карточка</span>
@@ -60,7 +60,7 @@
         </div>
 
         <div class="doc_item">
-          <a href="/docs/Представление работы на соискание премии Росгвардии (для авторского коллектива).pdf">
+          <a href="/docs/Predstavlenie_raboty_na_soiskanie_premii_Rosgvardii_(dlya_avtorskogo_kollektiva).pdf">
             <div class="doc_download">
               <div class="image"></div>
               <span class="text">Представление работы на соискание премии Росгвардии (авторский коллектив)</span>
@@ -69,7 +69,7 @@
         </div>
 
         <div class="doc_item">
-          <a href="/docs/Аннотация работы.pdf">
+          <a href="/docs/Annotaciya_raboty.pdf">
             <div class="doc_download">
               <div class="image"></div>
               <span class="text">Аннотация работы</span>
@@ -78,7 +78,7 @@
         </div>
 
         <div class="doc_item">
-          <a href="/docs/Письмо-разрешение на публикацию в открытой печати.pdf">
+          <a href="/docs/Pismo-razreshenie_na_publikaciyu_v_otkrytoj_pechati.pdf">
             <div class="doc_download">
               <div class="image"></div>
               <span class="text">Письмо-разрешение на публикацию в открытой печати</span>
@@ -87,7 +87,7 @@
         </div>
 
         <div class="doc_item">
-          <a href="/docs/Основное содержание работы.pdf">
+          <a href="/docs/Osnovnoe_soderzhanie_raboty.pdf">
             <div class="doc_download">
               <div class="image"></div>
               <span class="text">Основное содержание работы</span>
@@ -96,7 +96,7 @@
         </div>
 
         <div class="doc_item">
-          <a href="/docs/Согласие автора на обработку персональных данных.pdf">
+          <a href="/docs/Soglasie_avtora_na_obrabotku_personalnyh_dannyh.pdf">
             <div class="doc_download">
               <div class="image"></div>
               <span class="text">Согласие автора работы на обработку персональных данных</span>
@@ -105,7 +105,7 @@
         </div>
 
         <div class="doc_item">
-          <a href="/docs/Выписка из протокола заседания ученого совета(собрания трудового коллектива).pdf">
+          <a href="/docs/Vypiska_iz_protokola_zasedaniya_uchenogo_soveta(sobraniya_trudovogo_kollektiva).pdf">
             <div class="doc_download">
               <div class="image"></div>
               <span class="text">Выписка из протокола заседания ученого (научного, научно-технического) совета (собрания трудового коллектива)</span>
@@ -114,7 +114,7 @@
         </div>
 
         <div class="doc_item">
-          <a href="/docs/Согласие автора на передачу персональных данных третьим лицам.pdf">
+          <a href="/docs/Soglasie_avtora_na_peredachu_personalnyh_dannyh_tretim_licam.pdf">
             <div class="doc_download">
               <div class="image"></div>
               <span class="text">Согласие на передачу персональных данных третьим лицам</span>
@@ -123,7 +123,7 @@
         </div>
 
         <div class="doc_item">
-          <a href="/docs/Справка о творческом вкладе авторов работы, выдвигаемой на соискание премии Росгвардии.pdf">
+          <a href="/docs/Spravka_o_tvorcheskom_vklade_avtorov_raboty_vydvigaemoj_na_soiskanie_premii_Rosgvardii.pdf">
             <div class="doc_download">
               <div class="image"></div>
               <span class="text">Справка о творческом вкладе авторов работы, выдвигаемой на соискание премии Росгвардии</span>
@@ -132,7 +132,7 @@
         </div>
 
         <div class="doc_item">
-          <a href="/docs/Справка об экономическом эффекте.pdf">
+          <a href="/docs/Spravka_ob_ekonomicheskom_effekte.pdf">
             <div class="doc_download">
               <div class="image"></div>
               <span class="text">Справка об экономическом эффекте от реализации работы</span>
@@ -141,7 +141,7 @@
         </div>
 
         <div class="doc_item">
-          <a href="/docs/Сведения об авторе.pdf">
+          <a href="/docs/Svedeniya_ob_avtore.pdf">
             <div class="doc_download">
               <div class="image"></div>
               <span class="text">Сведения об авторе</span>
